# email-simplified

./: .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
docs/: api.md  conf.py  config.md  handler.md  index.md  message.md  smtp.md  start.md  testing.md
src/email_simplified/: __init__.py  address.py  attachment.py  message.py
src/email_simplified/handlers/: __init__.py  base.py  smtp.py  test.py
tests/: test_address.py  test_attachment.py  test_message.py
tests/handlers/: test_config.py  test_smtp.py  test_test.py
