[project]
name = "email-simplified"
version = "0.1.1.dev"
description = "Email builder and sending handler interface."
readme = "README.md"
authors = [{ name = "David Lord" }]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"

[project.urls]
Documentation = "https://email-simplified.readthedocs.io"
Changes = "https://email-simplified.readthedocs.io/page/changes/"
Source = "https://github.com/davidism/email-simplified/"

[project.entry-points."email_simplified.handler"]
smtp = "email_simplified.handlers.smtp:SMTPEmailHandler"
test = "email_simplified.handlers.test:TestEmailHandler"

[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "email_simplified"

[dependency-groups]
dev = [
    "ruff",
    "tox",
    "tox-uv",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
]
docs-auto = [
    "sphinx-autobuild",
]
gha-update = [
    "gha-update ; python_version>='3.12'",
]
pre-commit = [
    "pre-commit",
    "pre-commit-uv",
]
tests = [
    "pytest",
    "pytest-cov",
]
typing = [
    "mypy",
    "pyright",
]

[tool.uv]
default-groups = ["dev", "pre-commit", "tests", "typing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["email_simplified", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
exclude_also = [
    "if t.TYPE_CHECKING",
    "raise NotImplementedError",
    ": \\.{3}",
]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
show_error_codes = true
pretty = true
strict = true

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[tool.tox]
env_list = [
    "py3.14", "py3.13", "py3.12", "py3.11",
    "style",
    "typing",
    "docs",
]

[tool.tox.env_run_base]
description = "run pytest"
runner = "uv-venv-lock-runner"
package = "wheel"
wheel_build_env = ".pkg"
constrain_package_deps = true
use_frozen_constraints = true
dependency_groups = ["tests"]
commands = [
    [
        "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
        "--cov", "--cov-report=term-missing",
        { replace = "posargs", default = [], extend = true },
    ],
]

[tool.tox.env.style]
description = "run all pre-commit hooks on all files"
dependency_groups = ["pre-commit"]
skip_install = true
commands = [["pre-commit", "run", "--all-files"]]

[tool.tox.env.typing]
description = "run static type checkers"
dependency_groups = ["tests", "typing"]
commands = [
    ["mypy"],
    ["pyright", "--verifytypes", "email_simplified", "--ignoreexternal"],
]

[tool.tox.env.docs]
description = "build docs"
dependency_groups = ["docs"]
commands = [["sphinx-build", "-E", "-W", "-b", "dirhtml", "docs", "docs/_build/dirhtml"]]

[tool.tox.env.docs-auto]
description = "continuously rebuild docs and start a local server"
dependency_groups = ["docs", "docs-auto"]
commands = [["sphinx-autobuild", "-W", "-b", "dirhtml", "--watch", "src", "docs", "docs/_build/dirhtml"]]

[tool.tox.env.update-actions]
description = "update GitHub Actions pins"
labels = ["update"]
dependency_groups = ["gha-update"]
skip_install = true
commands = [["gha-update"]]

[tool.tox.env.update-pre_commit]
description = "update pre-commit pins"
labels = ["update"]
dependency_groups = ["pre-commit"]
skip_install = true
commands = [["pre-commit", "autoupdate", "--freeze", "-j4"]]

[tool.tox.env.update-requirements]
description = "update uv lock"
labels = ["update"]
dependency_groups = []
no_default_groups = true
skip_install = true
commands = [["uv", "lock", { replace = "posargs", default = ["-U"], extend = true }]]
